tests/ui/rfcs/rfc-2632-const-trait-impl/cross-crate.stock.stderr
error[E0015]: cannot call non-const fn `<cross_crate::Const as cross_crate::MyTrait>::func` in constant functions
  --> $DIR/cross-crate.rs:20:11
   |
LL |     Const.func();
   |           ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
